fix voting page display issue

--- a/app/static/css/components/stacked_chart/stacked_chart-mobile.css
+++ b/app/static/css/components/stacked_chart/stacked_chart-mobile.css
@@ -65,7 +65,10 @@
 	}
 
 	.legend-item {
-		flex-shrink: 0;
+		background: none;
+		border: none;
+		box-shadow: none;
+		padding: 0;
 	}
 
 	.legend-line::after {
