--- a/app/templates/tools.html
+++ b/app/templates/tools.html
@@ -102,7 +102,7 @@
             <div class="page-title-row">
                 <h1 class="page-title"><i class="fas fa-clipboard-list"></i> Meeting Roster</h1>
                 {% if has_roster_access %}
-                <a href="{{ url_for('tools_bp.roster_participation_trend') }}" class="icon-btn trend-btn" title="View Participation Trend">
+                <a href="{{ url_for('tools_bp.roster_participation_trend') }}" class="trend-btn" title="View Participation Trend">
                     <i class="fas fa-chart-line"></i>
                 </a>
                 {% endif %}
